Added style.css and applied it to each html files.

--- a/recipes/persianrice.html
+++ b/recipes/persianrice.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Persian Rice with Potato Tahdig</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <h2>Description</h2>
     <p>Potatoes are cooked at the bottom of the rice in this traditional Persian rice dish.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
         <li>2 cups basmati rice</li>
         <li>1 teaspoon salt</li>
         <li>2 tablespoons cooking oil</li>
@@ -25,5 +26,6 @@
         <li>Put oil in the bottom of the pot and place potato slices in a single layer over top. Pour cooked rice on top of potato slices, cover, and cook over low heat until rice and potatoes are tender, 20 to 30 minutes.</li>
         <li>Invert carefully onto a serving plate so sliced potatoes are on top of rice.</li>
     </ol>
+    <a href="../index.html">Back</a>
 </body>
 </html>
