--- a/recipes/sushimayo.html
+++ b/recipes/sushimayo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Spicy Sushi Mayo</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <h2>Description</h2>
     <p>You know the spicy mayo you get in sushi restaurants and grocery stores?<br>Pay no more! It's so easy to make at home.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
         <li>2 tablespoons mayonnaise</li>
         <li>2 teaspoons Sriracha hot sauce</li>
         <li>¼ teaspoon sesame oil</li>
@@ -22,5 +23,6 @@
         <li>Mix mayonnaise, Sriracha hot sauce, and sesame oil together in a bowl using a fork until smooth.</li>
         <li>Dip wahtever sushi you like in it. lmao.</li>
     </ol>
+    <a href="../index.html">Back</a>
 </body>
 </html>
