--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Brenda's Lasagna</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <h2>Description</h2>
     <p>This lasagna is delicious and easy to make.<br> If you're new to cooking this is the perfect dish to get your hands on.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
         <li>1 (16 ounce) package lasagna noodles</li>
         <li>1 pound lean ground beef</li>
         <li>salt and pepper to taste</li>
@@ -25,5 +26,6 @@
         <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
         <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
     </ol>
+    <a href="../index.html">Back</a>
 </body>
 </html>
